# urlshortner

./: .gitignore  Cargo.toml  Makefile  README.md
configuration/: base.yaml  production.yaml
docs/: tier.postman_collection.json
migrations/: 20230916075217_urls.up.sql  20230916075220_visits.up.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: health_check.rs  mod.rs  not_found.rs  response.rs
src/url_shortener/: configuration.rs  mod.rs  service.rs  url.rs  visit.rs
src/url_shortener/cache/: redis.rs
src/url_shortener/db/: postgres.rs
src/url_shortener/routes/: health_check.rs  mod.rs  not_found.rs  response.rs  shorten_url.rs  visit.rs
tests/: integration_tests.rs
